TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/Play_Tracker__b.object-meta.xml
<CustomObject>
    <description>Play Tracker</description>
    <label>Play Tracker</label>
    <pluralLabel>Play Tracker</pluralLabel>
</CustomObject>