TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account</description>
    <inlineHelpText>Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Play Tracker</relationshipLabel>
    <relationshipName>Play_Tracker</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>