TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <description>Device</description>
    <inlineHelpText>Device</inlineHelpText>
    <label>Device</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>