TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date</description>
    <inlineHelpText>End Date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>