TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Number_of_Plays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plays__c</fullName>
    <description>Number of Plays</description>
    <inlineHelpText>Number of Plays</inlineHelpText>
    <label>Number of Plays</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>