TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <description>OS</description>
    <inlineHelpText>OS</inlineHelpText>
    <label>OS</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>