TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Play_Date__c.field-meta.xml
<CustomField>
    <fullName>Play_Date__c</fullName>
    <description>Play Date</description>
    <inlineHelpText>Play Date</inlineHelpText>
    <label>Play Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>