TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Song__c.field-meta.xml
<CustomField>
    <fullName>Song__c</fullName>
    <description>Song</description>
    <inlineHelpText>Song</inlineHelpText>
    <label>Song</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipLabel>Play Tracker</relationshipLabel>
    <relationshipName>Play_Tracker</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>