TrainingDeveloperOrg/force-app/main/default/objects/Play_Tracker__b/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>